# WhatsApp1

./: .env.example  .gitignore  CODE_REVIEW_2026-06-20.md  CODING_GUIDELINES.md  HANDOFF.md  PROJECT_PROGRESS.md  README.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts  代码结构说明.md
contracts/: README.md  validate_examples.py
contracts/v1/: multiconnect.v1.schema.json  types.ts
docs/: code-review-account-status-refresh.md
docs/archive/: PRD.md  技术设计文档.md
scripts/: generate_icons.py  run-python.mjs
server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
server/scripts/: self-check.ts
server/src/: app.ts  config.ts  console-page.ts  device-channel.ts  errors.ts  index.ts  logger.ts  protocol.ts  schemas.ts  security.ts  server.ts  (+1 more)
sidecar/: README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx  data.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: deepl_config.rs  error.rs  google_config.rs  lib.rs  main.rs  native_input.rs  openai_config.rs  translation.rs
src-tauri/src/account_panel/: mod.rs
src-tauri/src/commands/: app.rs  deepl_config.rs  google_config.rs  mod.rs  openai_config.rs  panels.rs  remote_config.rs  remote_control.rs  whatsapp.rs
src-tauri/src/config/: remote.rs
src-tauri/src/contracts/: device_pairing.rs  mod.rs  session_vault.rs
src-tauri/src/platform_sidecar/: mod.rs
src-tauri/src/remote_control/: mod.rs  protocol.rs  service.rs
(+57 files in other folders)
